addressing scrollbar gutter issues soon

--- a/css/global.css
+++ b/css/global.css
@@ -131,6 +131,11 @@
 	width: 100px;
 }
 
+html {
+	overflow-y: scroll;
+	scrollbar-gutter: stable;
+}
+
 nav {
 	display: flex;
 	top: 10px;
@@ -158,6 +163,7 @@ nav button {
 body {
 	margin: 0;
 	background-color: black;
+
 	color: var(--text-color);
 	font-weight: 600;
 	font-size: 1rem;
@@ -166,7 +172,6 @@ body {
 	text-shadow:
 		1px 2px 2px black,
 		-1px 2px 2px black;
-
 	/* cursor: url('/assets/cursor.png'); */
 }
 
